# genai-blueprint

./: .env.example  .gitignore  .langchain.db  ::memory-shm  ::memory-wal  Agents.md  CHANGELOG.md  CONVENTIONS.md  Dockerfile  LICENSE  MODAL_DEPLOYMENT_GUIDE.md  Makefile  Makefile_container.mk  README.md  README_MODAL.md  This allows for more flexible usage, such as  __builtins__.pyi  _app_conf.toml  _sitecustomize.py  abbreviation_llm.xlsx  abbreviation_llm_2.xlsx  abbreviations.xlsx  abbreviations2.xlsx  app_conf.toml  app_conf.yaml  clean_notebooks.sh  ekg.py  ekg_visu.html  example.kuzu  graph_visualization.html  importtime.txt  master_search_v0.xlsx  master_search_v0_2.xlsx  mcp_servers.yaml  models_providers.yaml  package-lock.json  package_load_time.txt  poetry._lock  pyproject.toml  pyproject_old_poetry.toml  (+7 more)
.github/workflows/: ci.yml_old
.streamlit/: config.toml
animal_index_bm25/: corpus.jsonl  corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
config/: app_conf.yaml  auth.yaml  baseline.yaml  basic_auth.yaml  cli_examples.yaml  config.yaml  graph_rag_demos.yaml  mcp_servers.yaml  modal.yaml  models_providers.yaml  overrides.yaml
config/baseline/: embeddings.yaml  llm.yaml  vector_store.yaml
config/components/: cognee.yaml  gpt_researcher.yaml  pgvector.yaml
config/demo/: gptr_config_default.yaml
config/demos/: README.md  cli_examples.yaml  codeact_agent.yaml  cognee_kg.yaml  deep_agent.yaml  document_extractor.yaml  graph_rag.yaml  presidio_anonymization.yaml  react_agent.yaml
config/overrides/: training_edenai.yaml  training_local.yaml
config/providers/: embeddings.yaml  llm.yaml
config/schemas/: document_extractor.yaml
demos/: data_analyst_smolagents_demos.yaml
deploy/: Dockerfile  aws.mk  aws_tls.mk  azure.mk  docker.mk  generate_container_secrets.sh  generate_ssl.sh  github.mk  modal.mk  other.mk
doc/: diagram.py
docs/: deep_agent_cli_examples.md  deep_agents_integration.md
examples/: vllm_demo.py
genai_blueprint/ai_chains/: A_1_joke.py  B_1_naive_rag_example.py  B_2_self_query.py  C_1_tools_example.py  C_2_Agentic_Rag_Functional.py  C_2_advanced_rag_langgraph.py  C_2_advanced_rag_langgraph_functional.py  C_3_essay_writer_agent.py  C_4_agent_structured_output.py  fabric_chain.py
genai_blueprint/main/: cli.py  langserve_app.py  modal_app.py  streamlit.py
genai_blueprint/mcp_server/: tech_news.py  weather_server.py
genai_blueprint/wip/: carbon.ipynb  coder_agents.py  instrumentation.py  pyaudio1.py  smolagent_browser.py  smolagents_azure.py  smolagents_chain.py
notebooks/: .gitattributes  0_scratchpad.ipynb  0_scratchpad_ekg.ipynb  0_scratchpad_ekg0.ipynb  0_scratchpad_ekg1.ipynb  1-3_vector_store.ipynb  2-1_structured_output.ipynb  A_1_langchain_runnables.ipynb  A_2_embedings.ipynb  A_3_vector_store.ipynb  A_4_llm_joke.ipynb  A_4_llm_simple_joke.ipynb  B_1_structured_output.ipynb  B_2_image_text.ipynb  B_3_self_query.ipynb  B_4_GraphRAG.ipynb  B_4_RAG_Structured_output.ipynb  B_5_graph_rag_kuzu.ipynb  B_6_mistral_ocr.ipynb  C_10_human_in_the_loop.ipynb  C_11_Langgraph_functional.ipynb  C_11_custom_kg_with_cognee.ipynb  C_1_function_call.ipynb  C_2_langggraph.ipynb  C_3_react_agent.ipynb  C_3_tool_calling.ipynb  C_4_python_gen.ipynb  C_4_react_agent.ipynb  C_51_langgraph_react.ipynb  C_5_crewai_customer_support.ipynb  C_5_python_gen.ipynb  C_6_crewai_customer_support.ipynb  C_7_smolagents_examples.ipynb  C_8_mcp.ipynb  C_9_autogen_travel_planning.ipynb  D_1_giskard.ipynb  D_2_finetuning.ipynb  D_3_anonymization.ipynb  Qwen2_7b_finetuning (1).ipynb  carbon.ipynb  (+18 more)
notebooks/unmaintained/: B_6_mistral_ocr.ipynb  C_9_autogen_travel_planning.ipynb  D_1_giskard.ipynb
python/: GenAI_Lab.py  GenAI_Training.py  config.py  fastapi_app.py  langserve_app.py  main_api.py  main_cli.py  test.py  test_config.py
python/ai_agents/: coder_agents.py  dummy_data.py  maintenance_agents.py
python/ai_chains/: A_1_joke.py  B_1_naive_rag_example.py  B_2_self_query.py  C_1_tools_example.py  C_2_advanced_rag_langgraph.py  C_3_essay_writer_agent.py  C_4_agent_structured_output.py  chains.py  essai-writer-agent.py  essay_writer_agent.py  fabric.py  joke.py  lc_advanced_rag_langgraph.py  lc_advanced_rag_langraph.py  lc_rag_example.py  lc_self_query copy.py  lc_self_query.py  lc_tools_example.py  lg_rag_example.py  lg_tools_example.py  simple_langraph.py
python/ai_core/: agents_builder.py  cache.py  chain_registry.py  custom_agents.py  embeddings.py  instrumentation.py  llm.py  loaders.py  prompts.py  structured_output.py  tools.py  vector_store.py  vision.py
python/ai_extra/: autogen_utils.py  bm25s_retriever.py  fabric_chain.py  gpt_researcher.py  gpt_researcher_chain.py  mcp_tools.py  react_agent_structured_output.py  smolagents_chain.py  smoloagents_streamlit.py  test2.py  test_mcp.py  web_search_tool.py
python/ai_retrievers/: bm25s_retriever.py
python/ai_utils/: prompt_formatter.py
python/core/: coder_agents.py  dummy_data.py
python/pages/: 12_▫️_Crew_AI.py  13_▫️_Graph_Rag.py  13_▫️_OCR_Ollama.py  14_▫️_Graph_RAG.py  19_▫️_Practicum_A.py  1_▫️_Practicum_A.py  1_▫️_Runnable_Playground.py  2_▫️_Maintenance_Agent.py  2_▫️_Practicum_B.py  2_▫️_Runnable_Playground.py  3_°_Stock_Price.py  3_▫️_Stock_Price.py  4_▫️_CrewAI_demo.py  4_▫️_Dataframe_Agent.py  5_▫️_Mon_Master.py  5_▫️_Practicum_A copy.py  5_▫️_Practicum_A.py  7_▫️_GPT_Researcher.py  9_▫️_Maintenance_Agent.py  9_▫️_SmollAgent.py  9_▫️_maintenance_agent.py  chat_with_llm.py
python/retrievers/: informatica_extract.py
python/st_utils/: capturing_callback_handler.py  load_data.py
python/ui_components/: cypher_graph_display.py  (+3 more)
tests/: test_apis.py  test_cli.py  test_config.py  test_deep_agent.py  test_embeddings.py  test_kv_store.py  test_langchain_runnables.py  test_langserve.py  test_llm_basic.py  test_llm_joke.py  test_mcp.py  test_rich_markdown.py  test_search_agent.py  test_singleton.py  test_vector_store.py  test_vision.py
unit_tests/: test_deep_agent.py
vibe_coding/: CONVENTIONS.md  scripts.md
(+357 files in other folders)
